Fix VPP map not showing up in Safari

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -1,9 +1,3 @@
-.m-vehicle-map {
-  flex: 1 1 auto;
-  margin-top: 1rem;
-  min-height: 5rem;
-}
-
 .m-vehicle-map__label {
   @include font-emph;
 
